crates/pack/tests/compile_fail/fact_struct_literal.stderr
error[E0451]: fields `key`, `id`, `payload`, `promotion_record` and `created_at` of struct `ContextFact` are private
  --> tests/compile_fail/fact_struct_literal.rs:9:9
   |
 8 |     let _fact = ContextFact {
   |                 ----------- in this type
 9 |         key: ContextKey::Seeds,
   |         ^^^ private field
10 |         id: "test-id".into(),
   |         ^^ private field
11 |         payload: unreachable!(),
   |         ^^^^^^^ private field
12 |         promotion_record: unreachable!(),
   |         ^^^^^^^^^^^^^^^^ private field
13 |         created_at: unreachable!(),
   |         ^^^^^^^^^^ private field

error: trait `fact::ErasedFactPayload` is private
  --> tests/compile_fail/fact_struct_literal.rs:11:18
   |
11 |         payload: unreachable!(),
   |                  ^^^^^^^^^^^^^^ private trait
